[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/Transfer.gd" type="Script" id=1]

[sub_resource type="BitmapFont" id=1]
height = 22.0

[node name="Transfer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="RescueProgress" type="CanvasModulate" parent="."]

[node name="TimerReadout" type="Label" parent="RescueProgress"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 120, 50 )
custom_colors/font_color = Color( 0.0431373, 0.709804, 0.00392157, 1 )
custom_fonts/font = SubResource( 1 )
text = "PAX Transferring!"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RescueTimer" type="Timer" parent="."]
wait_time = 20.0
__meta__ = {
"_editor_description_": "Time to complete rescue."
}

[connection signal="timeout" from="RescueTimer" to="." method="_on_RescueTimer_timeout"]
